--- a/Collection/pom.xml
+++ b/Collection/pom.xml
@@ -17,6 +17,24 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- 引入javacv-platform依赖,视频处理 -->
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.5.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.8.8</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.14</version>
+        </dependency>
     </dependencies>
 
     <properties>
